fixed sizing issues causing white space to the right of the page, added image to 'whatis' section (placeholder for now)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,10 +25,10 @@ header {
 }
 #catchphrase {
     position: relative;
-    left: 40px; 
     top: 55px;
     font-family: 'Goldman', cursive;
     padding-top: 5px;
+    padding-left: 50px;
     font-size: 20px;
     font-weight: 200;
     color: white;
@@ -52,9 +52,8 @@ header {
 ul {
   position: relative;
   top: 40px;
-  left: 5px;
   list-style-type: none;
-  padding: 0;
+  padding-left: 20px;
 }
 li  {
   font-family: 'Goldman', cursive;
@@ -76,11 +75,11 @@ li:hover {
   top: 25px;
   color: white;
   background-color: red;
+  padding-left: 400px;
 }
 .covid p {
   position: relative;
   top: 8px;
-  left: 500px;
   margin: 0;
 }
 #tcclink {
@@ -172,7 +171,12 @@ footer a {
     bottom: 0px;
     left: 0;
     top: 50px;
-    
+  }
+  #leftimg {
+    position: relative;
+    top: 300px;
+    height: 500px;
+    width: 400px;
   }
 
 /* equipment bar */
